--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/index.css" rel="stylesheet">
-    <link href="css/carousel.css" rel="stylesheet">
+    <link href="stylesheets/index.css" rel="stylesheet">
+    <link href="stylesheets/carousel.css" rel="stylesheet">
   </head>
   <!-- NAVBAR
   ================================================== -->
@@ -67,7 +67,7 @@
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="app/main.js"></script>
 </body>
 </html>
 
