--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   <body ng-app="app">
     <div class="navbar-wrapper">
       <div class="container">
-
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -44,12 +43,12 @@
               </button>
               <a class="navbar-brand" href="#">Piter United</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <!-- <div class="navbar-collapse collapse"> -->
               <ul class="nav navbar-nav">
-                <li><a href="#communities">Сообщества</a></li>
+                <li class="active"><a href="#communities">Сообщества</a></li>
                 <li><a href="#meetups">Встречи</a></li>
               </ul>
-            </div>
+            <!-- </div> -->
           </div>
         </div>
 
