--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Piter United</a>
+              <a class="navbar-brand" href="#">&#8746;</a>
             </div>
-            <!-- <div class="navbar-collapse collapse"> -->
+            <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#communities">Сообщества</a></li>
-                <li><a href="#meetups">Встречи</a></li>
+                <nav-item href="/">Piter United</nav-item>
+                <nav-item href="/communities">Сообщества</nav-item>
+                <nav-item href="/meetups">Встречи</nav-item>
               </ul>
-            <!-- </div> -->
+            </div>
           </div>
         </div>
 
