--- a/index.html
+++ b/index.html
@@ -31,84 +31,215 @@
   <!-- NAVBAR
   ================================================== -->
   <body ng-app="app">
-    <div class="date">
-      16
-      <small>декабря</small>
-    </div>
-    <h1 class="title"> IT Global Meetup</h1>
-    <h2 class="subtitle">ИТ Сообщества Санкт-Петербурга в одном месте в одно время</h1>
-    <h2 class="place">
-      Почтамтская ул. 15 Начало в 18:00
-    </h2>
-    <br/>
-    <a class="b" href="https://plus.google.com/u/0/communities/117927540789820622012">
-      <h4>SPRUG</h4>
-      <p>Ruby User Group</p>
-    </a>
-    <a class="b">
-      <h4>SPRUG</h4>
-      <p>Ruby User Group</p>
-    </a>
-    <a class="b">
-      <h4>SPRUG</h4>
-      <p>Ruby User Group</p>
-    </a>
-    <a class="b">
-      <h4>SPRUG</h4>
-      <p>Ruby User Group</p>
-    </a>
-    <a class="b">
-      <h4>Piter United</h4>
-      <p>Ruby User Group</p>
-    </a>
-    <div class="clear"/>
-    <br/>
-    <style>
-      body {
-        padding: 4em 6em;
-        color: white;
-        background: #004763;
-      }
-      h1.title {
-        font-size: 70px;
-        text-transform: uppercase;
-      }
-      .date {
-        float: right;
-        color: white;
-        font-size: 80px;
-      }
-      .date small {
-        display: block;
-        font-size: 40px;
-      }
-      .b, .b:hover {
-        float: left;
-        width: 25%;
-        padding: 20px 30px;
-        background: #FC1E4A;
-        margin: 10px 10px 0 0;
-        color: white;
-        text-decoration: none;
-      }
 
-      .b h4 {
-        font-size: 2em;
-      }
-      .clear {
-        clear: both;
-      }
-    </style>
-  </div><!-- /.container -->
+    <div class="cnt">
+      <div class="row dirtmargin">
+        <div class="col-md-10">
+          <a href="https://plus.google.com/events/c2bmi82chkel46o226jvpb8qijo" target="_blank">
+            <h1 class="title dirtmargin" >IT Global Meetup</h1>
+          </a>
+          <h2 class="subtitle dirtmargin">ИТ Сообщества Санкт-Петербурга в одном месте в одно время</h2>
+          <h2 class="place">
+            <a href="http://maps.google.com/maps?q=почтамтская+15&hl=ru&ie=UTF8&sll=59.924055,30.377541&sspn=0.154162,0.333023&t=h&hnear=Почтамтская+ул.,+15,+Санкт-Петербург,+город+Санкт-Петербург,+Россия&z=16&iwloc=A" target="_blank">
+              Почтамтская ул. 15
+            </a></br>
+            Начало в 18:00</h2>
+        </div>
+
+        <div class="col-md-2">
+          <h1 class="title">16 </br>
+            <p class="datetext">Декабря<p>
+          </h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 blue box">
+          <a class="coltext" href="https://plus.google.com/u/0/communities/117927540789820622012" target="_blank">
+            <h2 class="dirtmargin">SPRUG</h2>
+            <p>Сообщество</br>
+            Ruby-программистов</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 red box">
+          <a class="coltext" href="https://plus.google.com/u/0/communities/108809460896106613736?partnerid=gplp0" target="_blank">
+            <h2 class="dirtmargin">Smart Management</h2>
+            <p>Сообщество</br>
+            IT менеджеров</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 green box">
+          <a class="coltext" href="http://www.meetup.com/DevOps-40/" target="_blank">
+            <h2 class="dirtmargin">DevOps-40</h2>
+            <p>Сообщество</br>
+            DevOps</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4 orange box">
+          <a class="coltext" href="https://plus.google.com/u/0/communities/112264824472767454602?partnerid=gplp0" target="_blank">
+            <h2 class="dirtmargin">AgilePiter</h2>
+            <p>Сообщество интересующихся гибкоми</br>
+            подходами к разработке</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 purpur box">
+          <a class="coltext" href="http://www.meetup.com/Golang-Peter/" target="_blank">
+            <h2 class="dirtmargin">Go</h2>
+            <p>Сообщество</br>
+            Go-программистов</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 orange box">
+          <a class="coltext" href="http://sqagroup.spb.ru" target="_blank">
+            <h2 class="dirtmargin">SQA Group</h2>
+            <p>Сообщество</br>
+            тестировщиков</p>
+          </a>
+        </div>
+
+      </div>
 
 
-  <!-- Bootstrap core JavaScript
-  ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
-  <script src="bower_components/jquery/jquery.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="app/main.js"></script>
-</body>
-</html>
 
+      <div class="row">
+
+        <div class="col-md-4 redpurpur box">
+          <a class="coltext" href="https://plus.google.com/u/0/communities/109003572589840580141" target="_blank">
+            <h2 class="dirtmargin">AngularJS</h2>
+            <p>Сообщество</br>
+            любителей AngularJS</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 blue box">
+          <a class="coltext" href="http://vk.com/spb_analytics" target="_blank">
+            <h2 class="dirtmargin">CoA</h2>
+            <p>Сообщество</br>
+            аналитиков</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 green box">
+          <a class="coltext" href="https://groups.google.com/forum/#!forum/erlang-russian" target="_blank">
+            <h2 class="dirtmargin">Erlang</h2>
+            <p>Сообщество</br>
+            Erlang-программистов</p>
+          </a>
+        </div>
+
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-4 purpur box">
+          <a class="coltext" href="http://lanyrd.com/2013/fprog-10/" target="_blank">
+            <h2 class="dirtmargin">FProg</h2>
+            <p>Сообщество</br> функциональных</br> программистов</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 red box">
+          <a href="#">
+            <p>и другие...</p>
+          </a>
+        </div>
+
+        <div class="col-md-4 box">
+          <a class="coltext" href="https://plus.google.com/communities/108851235934496354072" target="_blank">
+            <h2 class="dirtmargin">Piter United</h2>
+          </a>
+        </div>
+      </div>
+
+      <div>
+        <style>
+
+          body {
+            padding: 4em 6em;
+            color: white;
+            background: #004763;
+          }
+
+          .wrap {
+            width: 1400px;
+            margin: 0 auto;
+          }
+
+          h1.title {
+            font-size: 90px;
+          }
+
+          .datetext {
+            font-size: 0.3em;
+          }
+
+          a {
+            color: white;
+            text-decoration: none;
+          }
+          a:hover {
+            color: white;
+          }
+
+          p {
+            font-size: 18px;
+          }
+
+          .box {
+            padding: 3px;
+          }
+
+          .box a {
+            display: block;
+            padding: 20px 30px;
+            height: 200px;
+            opacity: 0.9;
+          }
+          .box a:hover {
+            text-decoration: none;
+            opacity: 1;
+          }
+          .blue a {
+            background-color: #4EB3B8;
+          }
+          .orange a {
+            background-color: #DA532C;
+          }
+          .green a {
+            background-color: #089045;
+          }
+          .purpur a {
+            background-color: #624D9F;
+          }
+          .redpurpur a {
+            background-color: #7C236C;
+          }
+          .red a {
+            background-color: #BE1E4A;
+          }
+
+          .cnt {
+            width: auto;
+            margin: 0 auto;
+          }
+
+        </style>
+        <!-- /.container -->
+
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="app/main.js"></script>
+      </body>
+    </html>
