--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 <script src="app/user/views/logout/controller.js"></script>
 <script src="app/user/views/list/controller.js"></script>
 <script src="app/user/views/page/controller.js"></script>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-46376696-1', 'piter-united.ru');
+    ga('send', 'pageview');
+
+</script>
 </body>
 </html>
 
