--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div ng-view></div>
         </section>
         <aside class="col-md-4 hidden-xs">
-            <div ng-include="routeData.asideTopUrl"></div>
+            <!--<div ng-include="routeData.asideTopUrl"></div>-->
             <div ng-include="routeData.asideMiddleUrl"></div>
-            <div ng-include="routeData.asideBottomUrl"></div>
+            <!--<div ng-include="routeData.asideBottomUrl"></div>-->
         </aside>
     </div>
 </div>
