--- a/app/user/directives/loginPopup/template.html
+++ b/app/user/directives/loginPopup/template.html
@@ -23,7 +23,7 @@
         <div class="alert alert-danger" ng-if="form.error">{{form.error}}</div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" ng-click="cancel()">Отмена</button>
+        <button type="button" class="btn btn-default" ng-click="close()">Отмена</button>
         <button type="button" class="btn btn-primary" ng-click="login()" ng-disabled="Login.$invalid">Войти</button>
     </div>
 </form>
