--- a/app/user/directives/afterAuth/template.html
+++ b/app/user/directives/afterAuth/template.html
@@ -4,7 +4,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <button class="btn btn-info" ng-click="loginTwitter(afterAuthAction)">Войти через Твиттер</button>
-                    <!--<button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>-->
+                    <button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>
                     <!--<button class="btn btn-default" ng-click="loginGithub()">Гитхаб</button>-->
                 </div>
             </div>
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <div class="col-md-12">
                     <button class="btn btn-info" ng-click="loginTwitter(afterAuthAction)">Войти через Твиттер</button>
-                    <!--<button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>-->
+                    <button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>
                     <!--<button class="btn btn-default" ng-click="loginGithub()">Гитхаб</button>-->
                 </div>
             </div>
