--- a/app/user/directives/authPopup/template.html
+++ b/app/user/directives/authPopup/template.html
@@ -5,7 +5,7 @@
                 <div class="form-group">
                     <div class="col-md-12">
                         <button class="btn btn-info" ng-click="loginTwitter()">Войти через Твиттер</button>
-                        <!--<button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>-->
+                        <button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>
                         <!--<button class="btn btn-default" ng-click="loginGithub()">Гитхаб</button>-->
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                 <div class="form-group">
                     <div class="col-md-12">
                         <button class="btn btn-info" ng-click="loginTwitter()">Войти через Твиттер</button>
-                        <!--<button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>-->
+                        <button class="btn btn-primary" ng-click="loginFacebook()">Фейсбук</button>
                         <!--<button class="btn btn-default" ng-click="loginGithub()">Гитхаб</button>-->
                     </div>
                 </div>
