--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Piter United
       <div class="item">
          <div class="slide1">
           <h2>IT Communities</h2>
-          <p>В нашем городе орагнизовано 12 профессиональных ИТ сообществ, <br>которые ежемесячно проводят офф-лайн встречи и общаются на своих он-лайн площадках </p>
+          <p>В нашем городе организовано 13 профессиональных ИТ сообществ, <br>которые ежемесячно проводят офф-лайн встречи и общаются на своих он-лайн площадках </p>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@ title: Piter United
       <div class="thumbnail">
         <div class="cname">
           <div class="test">
-            <img src="{{community.logo}}" width="80px" alt="..." class="img-circle">
+            <img src="{{community.logo}}" width="80px" alt="..." class="img-rounded">
             <p class="title"> {{community.title}} </p>
             <p class="desc"> {{community.desc}} </p>
           </div>
