--- a/test.html
+++ b/test.html
@@ -1,35 +1,34 @@
 ---
-layout: default
+layout: auth
 title: Test Page
 ---
+
 <div class="container">
-	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
-	  <ol class="carousel-indicators">
-	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-	  </ol>
-
-	  <!-- Wrapper for slides -->
-	  <div class="carousel-inner">
-	    <div class="item">
-	      <img src="img/samurai1.png" class="img-responsive">
+	<div class="col-md-6">
+		<span id="signin-button">
+		  <span
+		    class="g-signin"
+		    data-callback="loginFinishedCallback"
+		    data-clientid="274274289311-c967a7na1i2hjjdibec0kmb7n16bf4j9.apps.googleusercontent.com"
+		    data-cookiepolicy="single_host_origin"
+		    data-requestvisibleactions="http://schemas.google.com/AddActivity"
+		    data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read">
+		  </span>
+		</span>
+		<div id="profile" class="hide">
+	      <p style="float: left;" id="pic"></p>
+	      <h2 id="name"></h2>
+	      <p id="email"></p>
 	    </div>
-	    <div class="item">
-	      <img src="img/samurai2.png" class="img-responsive">
-	    </div>
-	    <div class="item active">
-	      <img src="img/samurai3.png" class="img-responsive">
-	    </div>
-	  </div>
-
-	  <!-- Controls -->
-	  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-	    <span class="glyphicon glyphicon-chevron-left"></span>
-	  </a>
-	  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-	    <span class="glyphicon glyphicon-chevron-right"></span>
-	  </a>
+	    <button id="signout-button" onClick="signOut()"> SignOut </button>
+	</div>
+	
+	<div class="col-md-6">
+		<g:plus action="share"></g:plus>
+		<a href="https://plus.google.com/share?url={piter-united.ru}" onclick="javascript:window.open(this.href,
+  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;"><img
+  src="https://www.gstatic.com/images/icons/gplus-32.png" alt="Share on Google+"/></a>
+  		<button onclick="mycalendar()"> Календарь </button>
 	</div>
 </div>
+
