--- a/globalmeetup.html
+++ b/globalmeetup.html
@@ -7,11 +7,11 @@ title: Piter United
 	<div class="container">
 		<div class="col-md-6">
 			<h1> IT Global Meetup</h1>
-			<p> Все профессиональные IT сообщества Санкт-Петербурга <br> в одно время в одном месте</p>
+			<p> Все профессиональные IT-сообщества Санкт-Петербурга <br> в одно время в одном месте</p>
 		</div>
 		<div class="col-md-6 righted">
 			<h1> 30 May'14</h1>
-			<p>Музей Связи <br>ул. Почтамтская, 15</p>
+			<p>Музей связи <br>ул. Почтамтская, 15</p>
 		</div>
 	</div>
 </div>
@@ -21,8 +21,8 @@ title: Piter United
 		<div class="col-md-3"> 
 			<h2>Piter United</h2>
 		</div>
-		<div class="col-md-9"> Объединение IT сообществ Санкт-Петербурга нацеленное на формирование и развитие профессионально-образовательной инфраструктуры на базе сообществ.<hr>
-		С 2013 года ежеквартально проводит встречи <strong>IT Global Meetups</strong> на которых собираются участники всех IT сообществ Санкт-Петербурга, знакомятся, обмениваются профессиональным опытом, развиваются и развивают!
+		<div class="col-md-9"> Объединение IT сообществ Санкт-Петербурга, нацеленное на формирование и развитие профессионально-образовательной инфраструктуры на базе сообществ.<hr>
+		С 2013 года ежеквартально проводит встречи <strong>IT Global Meetups</strong>, на которых собираются участники всех IT сообществ Санкт-Петербурга, знакомятся, обмениваются профессиональным опытом, развиваются и развивают!
 		</div>
 	</div>
 
@@ -37,11 +37,18 @@ title: Piter United
 		<h2>Участие в мероприятии</h2>
 		<div class="col-md-4 jumbotron">
 			<h3>Активное участие</h3>
-			<p>Вы можете <a href="/piterunited.html">зарегистрироваться</a> и <a href="/piterunited.html">присоединиться к сообществу</a> близкому по профессии и поучаствовать в формировании программы </p>
+			<ul>
+				<li><a href="/piterunited.html">зарегистрироваться</a></li>
+				<li><a href="/piterunited.html">присоединиться к сообществу</a></li>
+				<li>поучаствовать в формировании программы вашего сообщества</li>
+			</ul>
 		</div>
 		<div class="col-md-4 jumbotron">
 			<h3>Инфо- поддержка</h3>
-			<p>Вы можете рассказать о сообществах и предстоящей встрече своим коллегам и друзьям</p>
+			<ul>
+				<li><a href="/piterunited.html">зарегистрироваться</a></li>
+				<li>рассказать коллегам и друзьям о событии:</li>
+			</ul>
 			<div id="share-buttons">
 				<!-- Facebook -->
 				<a href="http://www.facebook.com/sharer.php?u=http://piter-united.ru" target="_blank"><img src="http://www.simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" /></a>
@@ -56,7 +63,11 @@ title: Piter United
 		</div>
 		<div class="col-md-4 jumbotron">
 			<h3>Пассивное участие</h3>
-			<p>Вы можете <a href="/piterunited.html">зарегистрироваться</a> и прийти на встречу,  послушать, поделиться своими знаниями и опытом</p>
+			<ul>
+				<li><a href="/piterunited.html">зарегистрироваться</a></li>
+				<li>прийти на встречу</li>
+				<li>... и в будущем всеми силами стараться стать активным</li>
+			</ul>
 		</div>
 	</div>
 	
