--- a/globalmeetup.html
+++ b/globalmeetup.html
@@ -38,15 +38,16 @@ title: Piter United
 		<div class="col-md-4 jumbotron">
 			<h3>Активное участие</h3>
 			<ul>
-				<li><a href="/piterunited.html">зарегистрироваться</a></li>
-				<li><a href="/piterunited.html">присоединиться к сообществу</a></li>
+				<li><a href="#registration">зарегистрироваться</a></li>
+				<li><a href="/">присоединиться к сообществу</a></li>
 				<li>поучаствовать в формировании программы вашего сообщества</li>
+				<li>прийти на встречу</li>
 			</ul>
 		</div>
 		<div class="col-md-4 jumbotron">
 			<h3>Инфо- поддержка</h3>
 			<ul>
-				<li><a href="/piterunited.html">зарегистрироваться</a></li>
+				<li><a href="#registration">зарегистрироваться</a></li>
 				<li>рассказать коллегам и друзьям о событии:</li>
 			</ul>
 			<div id="share-buttons">
@@ -62,19 +63,37 @@ title: Piter United
 
 		</div>
 		<div class="col-md-4 jumbotron">
-			<h3>Пассивное участие</h3>
+			<h3>Просто участие</h3>
 			<ul>
-				<li><a href="/piterunited.html">зарегистрироваться</a></li>
+				<li><a href="#registration">зарегистрироваться</a></li>
 				<li>прийти на встречу</li>
-				<li>... и в будущем всеми силами стараться стать активным</li>
 			</ul>
 		</div>
 	</div>
 	
-	<div class="row global_registration">
+	<div class="well">Регистрация БЕСПЛАТНАЯ, участие ОБЯЗАТЕЛЬНОЕ!!!</div>
+
+	<div class="row global_registration" id="registration">
 		<h2> Регистрация и место проведения</h2>
+			
+		<div class="col-md-6">
+			<h4>Музей связи, ул. Почтамтская 15</h4>
+			<h4>30 мая с 14.00 до 22.00</h4>
+			<button class="btn btn-primary btn-lg"> Зарегистрироваться </button>
+		</div>
+		<div class="col-md-6">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1999.0387483663649!2d30.2994503!3d59.9314992!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696311dcf95acab%3A0xf371f6498aeac213!2sPochtamtskaya+ulitsa%2C+15%2C+Sankt-Peterburg!5e0!3m2!1sen!2sru!4v1399284688602" width="600" height="450" frameborder="0" style="border:0"></iframe>
+		</div>
+	</div>
+
+	<div class="row sponsors">
+		<h2>Партнеры и спонсоры</h2>
+		<p>... логотипы и названия ...</p>
 	</div>
 </div>
 
 <div class="row footer">
+	<div class="container">
+		<a href="mailto:piterunited@gmail.com"> piterunited@gmail.com </a>
+	</div>
 </div>
