--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@ title: Piter United
 		<div class="col-md-6">
 			<h4>Музей связи, ул. Почтамтская 15</h4>
 			<h4>30 мая с 14.00 до 22.00</h4>
+			<br>
+			<h4>...Регистрация будет открыта в ближайшее время...</h4>
+			<!--
 			<button class="btn btn-primary btn-lg"> Зарегистрироваться </button>
+		-->
 		</div>
 		<div class="col-md-6">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1999.0387483663649!2d30.2994503!3d59.9314992!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696311dcf95acab%3A0xf371f6498aeac213!2sPochtamtskaya+ulitsa%2C+15%2C+Sankt-Peterburg!5e0!3m2!1sen!2sru!4v1399284688602" width="600" height="450" frameborder="0" style="border:0"></iframe>
