--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ title: Piter United
 				<!-- Facebook -->
 				<a href="http://www.facebook.com/sharer.php?u=http://piter-united.ru" target="_blank"><img src="http://www.simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" /></a>
 				<!-- Twitter -->
-				<a href="http://twitter.com/share?url=http://piter-united.ru&text=Simple Share Buttons" target="_blank"><img src="http://www.simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" /></a>
+				<a href="http://twitter.com/share?url=http://piter-united.ru&text=Весенний IT Global Meetup - 30 мая в Музее Связи, СПб" target="_blank"><img src="http://www.simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" /></a>
 				<!-- Google+ -->
 				<a href="https://plus.google.com/share?url=http://piter-united.ru" target="_blank"><img src="http://www.simplesharebuttons.com/images/somacro/google.png" alt="Google" /></a>
 				<!-- LinkedIn -->
