--- a/index.html
+++ b/index.html
@@ -89,8 +89,32 @@ title: Piter United
 	</div>
 
 	<div class="row sponsors">
-		<h2>Партнеры и спонсоры</h2>
-		<p>... логотипы и названия ...</p>
+		<h2>Организаторы и партнеры</h2>
+
+		<div class="row">
+			<div class="row">
+				<div class="col-xs-6 col-md-3">
+					<a href="http://piter-united.ru/p_index.html" class="thumbnail">
+					  <img data-src="holder.js/100%x180" src="img/piterunited.png" alt="Piter United" class="img-rounded img-responsive" width="171px;">
+					</a>
+				</div>
+				<div class="col-xs-6 col-md-6">
+					<h3>Piter United <small>Организатор</small></h3>
+					<p>Объединение IT сообществ Санкт-Петербурга, нацеленное на формирование и развитие профессионально-образовательной инфраструктуры на базе сообществ.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 col-md-3">
+					<a href="http://akmeinfo.ru" class="thumbnail">
+						<img data-src="holder.js/100%x180" src="img/akmeinfo.png" alt="Akmeinfo" class="img-rounded img-responsive" width="171px;">
+					</a>
+				</div>
+				<div class="col-xs-6 col-md-6">
+					<h3>АНО "ЕИЦСООиДП" <small>Генеральный партнер</small></h3>
+					<p>Единый информационный центр социально ответственных организаций и добросовестных Предпринимателей.</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
