--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@ title: Piter United
 	<div class="well">Мы рады пригласить вас на весенний <br> <strong>IT Global Meetup</strong> <br>30 мая 2014 года в Санкт-Петербурге</div>
 
 	<div class="row global_programm">
-		<h2> Программа </h2>
+		<h2> Программа</h2> 
 		<img src="img/timeline.png" class="img-responsive">
+		<div class="prog_link">
+			<a class="btn btn-default" href="http://goo.gl/zuvILC" target="_blank"> Подробная программа</a>
+		</div>
 	</div>
 
 	<div class="row global_proposition">
@@ -112,6 +115,28 @@ title: Piter United
 				<div class="col-xs-6 col-md-6">
 					<h3>АНО "ЕИЦСООиДП" <small>Генеральный партнер</small></h3>
 					<p>Единый информационный центр социально ответственных организаций и добросовестных Предпринимателей.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 col-md-3">
+					<a href="http://dins.ru" class="thumbnail">
+						<img data-src="holder.js/100%x180" src="img/dins.png" alt="DINS" class="img-rounded img-responsive" width="171px;">
+					</a>
+				</div>
+				<div class="col-xs-6 col-md-6">
+					<h3>DINO systems <small>Золотой партнер</small></h3>
+					<p>Центр разработок американской телекоммуникационной компании RingCentral, Inc., одного из ведущих провайдеров современных телекоммуникационных услуг.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 col-md-3">
+					<a href="http://www.dataart.ru/.ru" class="thumbnail">
+						<img data-src="holder.js/100%x180" src="img/dataart.png" alt="DataArt" class="img-rounded img-responsive" width="171px;">
+					</a>
+				</div>
+				<div class="col-xs-6 col-md-6">
+					<h3>DataArt <small>Серебряный партнер</small></h3>
+					<p>Разработка заказного ПО для финансовых институтов и технологических компаний, работающих в области финансов, мобильных разработок, онлайн-путешествий, медицине, Интернет-проектах, масс-медиа.</p>
 				</div>
 			</div>
 		</div>
