--- a/p_index.html
+++ b/p_index.html
@@ -78,7 +78,7 @@ title: Piter United
           </div>
           <hr>
           <span> {{community.members}}</span>
-          <a class="btn btn-default btn-sm join" href="{{community.link}}"> Join Community </a>
+          <a class="btn btn-default btn-sm join" href="{{community.link}}" target="_blank"> Join Community </a>
         </div>
       </div>
     </div>
