--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: Piter United
 		<div class="row">
 			<div class="row">
 				<div class="col-xs-6 col-md-3">
-					<a href="http://piter-united.ru/p_index.html" class="thumbnail">
+					<a href="http://piter-united.ru/p_index.html" class="thumbnail" target="_blank">
 					  <img data-src="holder.js/100%x180" src="img/piterunited.png" alt="Piter United" class="img-rounded img-responsive" width="171px;">
 					</a>
 				</div>
@@ -108,7 +108,7 @@ title: Piter United
 			</div>
 			<div class="row">
 				<div class="col-xs-6 col-md-3">
-					<a href="http://akmeinfo.ru" class="thumbnail">
+					<a href="http://akmeinfo.ru" class="thumbnail" target="_blank">
 						<img data-src="holder.js/100%x180" src="img/akmeinfo.png" alt="Akmeinfo" class="img-rounded img-responsive" width="171px;">
 					</a>
 				</div>
@@ -119,7 +119,7 @@ title: Piter United
 			</div>
 			<div class="row">
 				<div class="col-xs-6 col-md-3">
-					<a href="http://dins.ru" class="thumbnail">
+					<a href="http://dins.ru" class="thumbnail" target="_blank">
 						<img data-src="holder.js/100%x180" src="img/dins.png" alt="DINS" class="img-rounded img-responsive" width="171px;">
 					</a>
 				</div>
@@ -130,7 +130,7 @@ title: Piter United
 			</div>
 			<div class="row">
 				<div class="col-xs-6 col-md-3">
-					<a href="http://www.dataart.ru/.ru" class="thumbnail">
+					<a href="http://www.dataart.ru/.ru" class="thumbnail" target="_blank">
 						<img data-src="holder.js/100%x180" src="img/dataart.png" alt="DataArt" class="img-rounded img-responsive" width="171px;">
 					</a>
 				</div>
